# uwuki

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  dump.rdb
assets/: amendments.json
src/: ;  command_handler.rs  crates.rs  gateway.rs  github.rs  http.rs  lib.rs  main.rs  models.rs  playground.rs  state.rs  urban_dictionary.rs  utils.rs
src/commands/: amendments.rs  apply.rs  ban.rs  crates.rs  define.rs  exec.rs  imposter.rs  links.rs  mod.rs  pls.rs  say.rs  vtuber.rs
uwuki_macros/: Cargo.toml
uwuki_macros/src/: lib.rs
