[package]
name = "uwuki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
reqwest = { version = "0.11.11", features = ["json"] }
serde_json = "1.0.85"
todel = { git = "https://github.com/eludris/todel", version = "0.1.0" }
tokio = { version = "1.21.1", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
