[package]
name = "uwuki"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.5"
env_logger = "0.9.1"
futures = "0.3.24"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.6.0"
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["rt-multi-thread", "macros"] }
eludrs = { version = "0.3.2", git = "https://github.com/eludris-community/eludrs" }
uwuki_macros = { path = "./uwuki_macros" }
anyhow = "1.0.68"
async-trait = "0.1.63"
